Add feature folder

--- a/tools/host-gcc/Dockerfile
+++ b/tools/host-gcc/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Raphael Meyer <raphael.akira.meyer@gmail.com>
 
 RUN apt-get update && apt-get install -y \
   cmake \
+  cucumber \
   g++ \
   git \
   libboost-all-dev \
