--- a/tools/host-gcc/Dockerfile
+++ b/tools/host-gcc/Dockerfile
@@ -4,11 +4,14 @@ MAINTAINER Raphael Meyer <raphael.akira.meyer@gmail.com>
 
 RUN apt-get update && apt-get install -y \
   cmake \
-  cucumber \
   g++ \
   git \
   libboost-all-dev \
-  make
+  make \
+  ruby \
+  ruby-dev
+
+RUN gem install cucumber oj
 
 USER user
 
