Initial setup for AVR target

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -36,3 +36,11 @@ target_link_libraries(skeleton
   PRIVATE ws::app
   )
 
+
+########################################################################
+# TODO
+########################################################################
+add_avr_executable(app
+  main.cc
+  )
+
