Started with restructuring project into controller and device

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,22 +12,10 @@ add_subdirectory(gmock-1.7.0)
 
 ########################################################################
 
-add_subdirectory(fw)
-add_subdirectory(fw-test)
-add_subdirectory(fw-main)
-
-########################################################################
-
-add_subdirectory(main)
-add_subdirectory(app)
-add_subdirectory(app-test)
-add_subdirectory(acceptance-test-host)
+add_subdirectory(controller)
+add_subdirectory(device)
 
 ########################################################################
 
 enable_testing()
 add_test(NAME run-app-test COMMAND test::app-test)
-
-########################################################################
-
-
