Setup some build targets for device

--- a/source/device/CMakeLists.txt
+++ b/source/device/CMakeLists.txt
@@ -1,5 +1,8 @@
+########################################################################
+include(avr.cmake)
+########################################################################
 
-add_subdirectory(fw)
-add_subdirectory(fw-test)
-add_subdirectory(fw-main)
+add_subdirectory(device-lib)
+add_subdirectory(device-test)
 
+add_subdirectory(device-exe)
