Spike for I2C with arduino

--- a/source/controller/controller-exe/CMakeLists.txt
+++ b/source/controller/controller-exe/CMakeLists.txt
@@ -1,3 +1,8 @@
+########################################################################
+# Workaround for cmake 3.0
+add_definitions(-std=c++14)
+########################################################################
+
 
 add_executable(controller-exe
   main.cc
@@ -9,3 +14,4 @@ target_link_libraries(controller-exe
   )
 
 set_property(TARGET controller-exe PROPERTY CXX_STANDARD 14)
+set_property(TARGET controller-exe PROPERTY CXX_STANDARD_REQUIRED ON)
