Skeleton for device feature tests

--- a/source/device/CMakeLists.txt
+++ b/source/device/CMakeLists.txt
@@ -5,4 +5,6 @@ include(avr.cmake)
 add_subdirectory(device-lib)
 add_subdirectory(device-test)
 
+add_subdirectory(device-cucumber)
+
 add_subdirectory(device-exe)
