Skeleton for first feature

--- a/source/device/device-cucumber/CMakeLists.txt
+++ b/source/device/device-cucumber/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(device-cucumber
   main.cc
-  )
+  device_context.h)
 add_executable(test::device-cucumber ALIAS device-cucumber)
 
 target_link_libraries(device-cucumber
