--- a/source/device/CMakeLists.txt
+++ b/source/device/CMakeLists.txt
@@ -4,7 +4,7 @@ include(avr.cmake)
 
 add_subdirectory(device-exe)
 
-add_subdirectory(device-cucumber)
+add_subdirectory(features)
 
 add_subdirectory(device-test)
 add_subdirectory(device-lib)
