--- a/source/device/features/CMakeLists.txt
+++ b/source/device/features/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(device-cucumber
   step_definitions/device_context.h
   step_definitions/gpio_stub.h
   step_definitions/pwm_spy.h
-  )
+  step_definitions/seams.cc)
 add_executable(test::device-cucumber ALIAS device-cucumber)
 
 target_link_libraries(device-cucumber
