--- a/source/device/device-test/CMakeLists.txt
+++ b/source/device/device-test/CMakeLists.txt
@@ -3,7 +3,9 @@ add_executable(device-test
   device.cc
   gpio.cc
   pretty_print.h
-  seams.cc)
+  pwm.cc
+  seams.cc
+  )
 add_executable(test::device-test ALIAS device-test)
 
 target_link_libraries(device-test
