--- a/source/device/device-lib/CMakeLists.txt
+++ b/source/device/device-lib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(device
   device.c
   gpio.c
   pwm.c
+  timer.c
   include/device/device.h
   include/device/gpio.h
   include/device/pwm.h
