Use device interfaces in features

--- a/source/device/features/CMakeLists.txt
+++ b/source/device/features/CMakeLists.txt
@@ -3,6 +3,9 @@ add_executable(device-cucumber
   step_definitions/dummy.cc
   step_definitions/steps.cc
   test_doubles/seams.cc
+  step_definitions/device_context.h
+  test_doubles/button_fake.h
+  test_doubles/pwm_spy.h
   )
 add_executable(test::device-cucumber ALIAS device-cucumber)
 
