Infrastructure for timer implementation

--- a/source/device/device-lib/CMakeLists.txt
+++ b/source/device/device-lib/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(device
   device.c
   gpio.c
   pwm.c
+  timer.c
   include/device/ipwm.h
   include/device/itimer.h
   include/device/device.h
