System tick skeleton and todo list in tests

--- a/source/device/device-lib/CMakeLists.txt
+++ b/source/device/device-lib/CMakeLists.txt
@@ -4,12 +4,14 @@ add_library(device
   gpio.c
   ipwm.c
   pwm.c
+  system_tick.c
   timer.c
   include/device/device.h
   include/device/gpio.h
   include/device/io.h
   include/device/ipwm.h
   include/device/pwm.h
+  include/device/system_tick.h
   include/device/timer.h
   )
 add_library(device::device ALIAS device)
