Move steps definitions into features location

--- a/source/controller/CMakeLists.txt
+++ b/source/controller/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_subdirectory(controller-exe)
 
-add_subdirectory(controller-cucumber)
+add_subdirectory(features)
 
 add_subdirectory(application-test)
 add_subdirectory(application-lib)
