Feedback from feature for first controller test

--- a/source/controller/application-lib/CMakeLists.txt
+++ b/source/controller/application-lib/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(application
   application.cc
   include/application/application.h
   include/application/icommand.h
+  include/application/iinterrupt.h
   )
 add_library(controller::application ALIAS application)
 
