--- a/source/controller/features/CMakeLists.txt
+++ b/source/controller/features/CMakeLists.txt
@@ -1,15 +1,15 @@
 
-add_executable(controller-cucumber
+add_executable(module-cucumber
   step_definitions/steps.cc
   step_definitions/dummy.cc
   step_definitions/controller_context.h
   )
-add_executable(test::controller-cucumber ALIAS controller-cucumber)
+add_executable(test::module-cucumber ALIAS module-cucumber)
 
-target_link_libraries(controller-cucumber
+target_link_libraries(module-cucumber
   PRIVATE module::application
   PRIVATE test::cucumber-cpp
   )
 
-set_property(TARGET controller-cucumber PROPERTY CXX_STANDARD 14)
-set_property(TARGET controller-cucumber PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET module-cucumber PROPERTY CXX_STANDARD 14)
+set_property(TARGET module-cucumber PROPERTY CXX_STANDARD_REQUIRED ON)
