--- a/source/module/module-exe/CMakeLists.txt
+++ b/source/module/module-exe/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(module::module-exe ALIAS module-exe)
 
 target_link_libraries(module-exe
   PRIVATE module::application
+  PRIVATE pthread
   )
 
 set_property(TARGET module-exe PROPERTY CXX_STANDARD 14)
