replace cucumber-cpp and googletest with submodules

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,8 +6,8 @@ project (skeleton VERSION 0.0.1)
 
 ########################################################################
 
-add_subdirectory(cucumber-cpp-0.3)
-add_subdirectory(gmock-1.7.0)
+include(googletest.cmake)
+include(cucumber-cpp.cmake)
 
 ########################################################################
 
